# argus-mind-service

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml  roadmap.md
.ai/: architecture.md  coding-philosophy.md  constitution.md  definition-of-done.md  development-principles.md  review-checklist.md
.github/: PULL_REQUEST_TEMPLATE.md
adr/: ADR-001-five-engine-architecture.md  ADR-001-five-engine-modular-architecture.md  ADR-002-chunk-internal-only.md  ADR-002-chunk-is-an-internal-only-concept.md  ADR-003-evidence-immutable.md  ADR-003-evidence-is-an-immutable-append-only-log.md  ADR-004-confidence-derived.md  ADR-004-confidence-is-a-derived-recomputable-projection.md  ADR-005-generation-output-must-pass-validation-gate.md  ADR-005-validation-gate.md  README.md  template.md
automation/: README.md  quality-gates.md  workflow-spec-template.md
docs/: README.md  architecture-overview.md  development-workflow.md  domain-principles.md  engineering-principles.md  repository-structure.md  vision.md
glossary/: README.md
memory/: api-conventions.md  coding-standards.md  domain-rules.md  glossary.md  pedagogy.md
prompts/: README.md  create-adr.md  generate-migration.md  generate-specification.md  generate-tasks.md  generate-tests.md  implement-feature.md  performance-review.md  refactor.md  review-architecture.md  review-code.md  review-pull-request.md  security-review.md
skills/: README.md  architecture.md  clean-architecture.md  ddd.md  docker.md  fastapi.md  flutter.md  github-actions.md  postgres.md  prompt-engineering.md  python.md  testing.md
(+154 files in other folders)
