[project]
name = "argus-mind-service"
version = "0.1.0"
description = ""
authors = [
    {name = "wesley1263",email = "weslei.andrade.souza@gmail.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
